--- a/src/components/foxList/FoxList.css
+++ b/src/components/foxList/FoxList.css
@@ -1,13 +1,14 @@
-.foxList {
-  background: #5c8a8a;
-}
-
 .btn-group {
-  margin-top: 3px;
+  margin-top: 1px;
   margin-left: 1px;
+  margin-bottom: 10px;
+  background: #f5f5f5;
 }
 
 .btn-group button {
-  width: 6rem;
+  width: 5rem;
   height: 3rem;
+  margin-right: 3px;
+  border: 1px solid #e0a985;
+  border-radius: 10px;
 }
