--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,30 @@
-.fox-grid {
-  margin: 0 0 10px 0;
-  display: grid;
-  grid-template-rows: repeat(auto-fill, minmax(230px, 1fr));
-  gap: 20px 30px;
-}
-
 .home-link {
   text-decoration: none;
   font-size: 16px;
   color: crimson;
 }
 
-.home-card-items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 0 auto;
-  width: 40%;
-  padding-top: 30px;
+.home-nav {
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: crimson;
+  margin: 4% 0;
 }
 
-.home-wrapper {
-  margin-bottom: 10px;
+.home-nav:hover {
+  transition: all ease-in 0.6s;
+  font-size: 22px;
+}
+
+.home-card-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 0.5rem;
+  margin: 5px 10px;
+}
+
+.home-card-items:last-child {
+  padding-bottom: 15px;
 }
