--- a/src/components/foxList/FoxList.css
+++ b/src/components/foxList/FoxList.css
@@ -1,7 +1,7 @@
 .btn-group {
   margin-top: 1px;
   margin-left: 1px;
-  margin-bottom: 10px;
+  margin-bottom: 3%;
   background: #f5f5f5;
 }
 
@@ -10,5 +10,13 @@
   height: 3rem;
   margin-right: 3px;
   border: 1px solid #e0a985;
-  border-radius: 10px;
+  border-radius: 5px;
+}
+
+.btn-group button:hover {
+  background: none;
+}
+
+.btn-danger:hover {
+  color: red;
 }
